// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`after 1`] = `
Object {
  "&::after": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`backdrop 1`] = `
Object {
  "&::backdrop": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`before 1`] = `
Object {
  "&::before": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`fileSelectorButton 1`] = `
Object {
  "css": Object {
    "&::file-selector-button": Object {
      "--w-bg-opacity": "1",
      "backgroundClip": "content-box",
      "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
      "webkitBackgroundClip": "content-box",
    },
  },
}
`;

exports[`firstLetter 1`] = `
Object {
  "&::first-letter": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`firstLine 1`] = `
Object {
  "&::first-line": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`marker 1`] = `
Object {
  "& *::marker, &::marker": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`selection 1`] = `
Object {
  "& *::selection, &::selection": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;
